@@ -12,12 +12,6 @@ matrix:
     dist: trusty
   - perl: "5.16"
     dist: trusty
-  - perl: "5.14"
-    dist: trusty
-  - perl: "5.12"
-    dist: trusty
-  - perl: "5.10"
-    dist: trusty
 script:
   - perl Build.PL && ./Build && ./Build test
   - prove -lr xt/author/
