@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.014.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.017.
     use strict;
     use warnings;
 
@@ -84,7 +84,7 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Mojo-Reactor-Epoll",
-      "dist_version" => "0.010",
+      "dist_version" => "0.011",
       "license" => "artistic_2",
       "module_name" => "Mojo::Reactor::Epoll",
       "recursive_test_files" => 1,
