@@ -1,9 +1,0 @@
-requires 'perl'         => '5.010001';
-requires 'Carp';
-requires 'Linux::Epoll' => '0.013';
-requires 'List::Util';
-requires 'Mojolicious'  => '7.37';
-requires 'Scalar::Util';
-requires 'Time::HiRes';
-test_requires 'IO::Socket::INET';
-test_requires 'Test::More' => '0.88';
